// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SalaireTempsPlein /> should autofill blank input 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
}

.c0:before,
.c0:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c0:before {
  left: -2rem;
}

.c0:after {
  right: -2rem;
}

.c1 {
  overflow-x: auto;
}

.c2 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-collapse: collapse;
  border-spacing: 0;
}

.c2 caption {
  padding: 1rem 0;
  font-style: italic;
  text-align: center;
}

.c2 td,
.c2 th {
  padding: 1rem 1.6rem;
  border: 1px solid #bbcadf;
}

.c2 th {
  color: #2f3b6c;
  font-weight: 600;
  background: #e4e8ef;
}

.c2 thead,
.c2 tfoot {
  padding: 1rem 1.6rem;
  vertical-align: bottom;
  background: #f2f5fa;
}

.c2 tfoot {
  vertical-align: top;
}

.c3 {
  width: 70%;
}

.c3 tr > td:nth-child(2) {
  width: 70%;
  text-align: left;
}

.c5 {
  width: 10em;
  text-align: right;
  border-color: #bbcadf;
  padding-right: 1.6rem;
  text-align: right;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4 {
  position: relative;
  display: inline-block;
  margin-right: 2rem;
}

.c6 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <table
        class="c2 c3"
      >
        <caption>
          Salaire mensuel brut (prendre en compte les primes et avantages en nature)
        </caption>
        <thead>
          <tr>
            <th>
              Mois
            </th>
            <th>
              Salaire mensuel brut
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <label
                for="salary0"
              >
                janvier
              </label>
            </td>
            <td>
              <div
                class="c4"
              >
                <input
                  class="c5"
                  id="salary0"
                  name="periods[0].salary"
                  type="number"
                  value="2000"
                />
                <span
                  aria-hidden="true"
                  class="c6"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary1"
              >
                février
              </label>
            </td>
            <td>
              <div
                class="c4"
              >
                <input
                  class="c5"
                  id="salary1"
                  name="periods[1].salary"
                  type="number"
                  value="2000"
                />
                <span
                  aria-hidden="true"
                  class="c6"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`<SalaireTempsPlein /> should render 1`] = `
.c0 {
  position: relative;
  overflow: hidden;
}

.c0:before,
.c0:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c0:before {
  left: -2rem;
}

.c0:after {
  right: -2rem;
}

.c1 {
  overflow-x: auto;
}

.c2 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-collapse: collapse;
  border-spacing: 0;
}

.c2 caption {
  padding: 1rem 0;
  font-style: italic;
  text-align: center;
}

.c2 td,
.c2 th {
  padding: 1rem 1.6rem;
  border: 1px solid #bbcadf;
}

.c2 th {
  color: #2f3b6c;
  font-weight: 600;
  background: #e4e8ef;
}

.c2 thead,
.c2 tfoot {
  padding: 1rem 1.6rem;
  vertical-align: bottom;
  background: #f2f5fa;
}

.c2 tfoot {
  vertical-align: top;
}

.c3 {
  width: 70%;
}

.c3 tr > td:nth-child(2) {
  width: 70%;
  text-align: left;
}

.c5 {
  width: 10em;
  text-align: right;
  border-color: #bbcadf;
  padding-right: 1.6rem;
  text-align: right;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4 {
  position: relative;
  display: inline-block;
  margin-right: 2rem;
}

.c6 {
  position: absolute;
  top: 50%;
  right: 0.25rem;
  color: #4d73b8;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <table
        class="c2 c3"
      >
        <caption>
          Salaire mensuel brut (prendre en compte les primes et avantages en nature)
        </caption>
        <thead>
          <tr>
            <th>
              Mois
            </th>
            <th>
              Salaire mensuel brut
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <label
                for="salary0"
              >
                janvier
              </label>
            </td>
            <td>
              <div
                class="c4"
              >
                <input
                  class="c5"
                  id="salary0"
                  name="periods[0].salary"
                  type="number"
                  value="2000"
                />
                <span
                  aria-hidden="true"
                  class="c6"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <label
                for="salary1"
              >
                février
              </label>
            </td>
            <td>
              <div
                class="c4"
              >
                <input
                  class="c5"
                  id="salary1"
                  name="periods[1].salary"
                  type="number"
                  value="1000"
                />
                <span
                  aria-hidden="true"
                  class="c6"
                >
                  €
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
